--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -133,7 +133,7 @@ However, similar minimum temperatures under forest canopies have been observed i
 - DETAILS - REFS
 - @mcgregor_tree_nodate
 
-Forest canopies moderate relative humidity in below-canopy microclimates along with temperature. In three European forest types (Broadleaved, Non-Pine Conifer, Pine) canopy buffering was observed to decrease daily maximum $T_{air}$ and increase daily minimum RH in below-canopy microclimate [@vonarxSpatiotemporalEffectsForest2012] 
+Forest canopies moderate relative humidity in below-canopy microclimates along with temperature. In three European forest types (Broadleaved, Non-Pine Conifer, Pine) canopy buffering was observed to decrease daily maximum $T_{air}$ and increase daily minimum RH in below-canopy microclimate.With rising temperatures, this trend in maximum $T_{air} and RH would have implications on understory seedling growth, especially in high altitude temperate pine forests [@vonarxSpatiotemporalEffectsForest2012] 
 
 RH, in combination with temperature, determines vapor pressure deficit, $VPD$
 - $VPD$ is lower in understory of Atlantic forest during wet season [@fauset_differences_2018, Tymen et al. 2017]
@@ -142,7 +142,7 @@ This means that canopy leaves tend to be exposed to higher *evaporative demand*,
 **Finally, carbon dioxide (CO~2~) concentrations tend to be higher in the understory.** 
 -	Higher in understory, particularly at dusk (Koike et al. 2001).
 -	Higher in the understory overnight; difference persists during the day but is very small [@yang_spatial_1999].
-Differences in concentration are by far most pronounced near ground level. 
+Differences in concentration are by far most pronounced near ground level.[@niinemetsPhotosyntheticAcclimationSimultaneous2004]
 Given that differences are small during the day when photosynthesis is active, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentration is unlikely to have much effect on the energy balance and metabolism of leaves across the forest vertical gradient. 
 
 
@@ -156,7 +156,7 @@ First, buffering increases with canopy cover.
 * [@thom_effects_2020; Tymen et al. 2017 ; Jucker et al. 2018 ; Hardwick et al. 2015]
 *Presumably, buffering would also be affected by canopy roughness, which affects turbulent air flow and the canopy boundary layer.*
 Taller trees don’t necessarily increase buffering [@zellweger_seasonal_2019]. 
-Species that have higher shade casting ability increase T buffering (Zelllweger et al. 2019) [@zellweger_seasonal_2019]
+Species that have higher shade casting ability such as braodleaved trees increase T buffering (Zelllweger et al. 2019) [@zellweger_seasonal_2019,@vonarxSpatiotemporalEffectsForest2012]
 The strength of buffering also varies with respect to geographic and climatic factors.
 * Distance to coast, topographic position, elevation [@zellweger_seasonal_2019]
 * [@davis_microclimatic_2019]
@@ -164,7 +164,7 @@ However vertical climate gradients within forests are known to be steeper than t
 
 ## Trait variation 
 
-Leaf traits vary along the vertical canopy profile following the pattern of light availability across the gradient [@poorterMetaanalysisPlantResponses2019b]. Leaves in the upper canopy that are exposed to more light differ in their traits compared to shaded leaves exposed to less light. Increasing number of studies point towards the importance of incorporating vertical canopy leaf trait variation in modelling for leaf economic spectrum (LES) [Chen et al. 2020], leaf thermoregular and thermal sensitivty which will provide a more accurate representation of within-canopy gradient response to increasing temperatures.[@fauset_differences_2018, @michaletzEnergeticCarbonEconomic2016, @niinemetsWorldwideAnalysisWithincanopy2015, Chen et al. 2020, REFS)
+Leaf traits vary along the vertical canopy profile following the pattern of light availability across the gradient [@poorterMetaanalysisPlantResponses2019b]. Leaves in the upper canopy that are exposed to more light differ in their traits compared to shaded leaves exposed to less light [@@niinemetsWorldwideAnalysisWithincanopy2015] Increasing number of studies point towards the importance of incorporating vertical canopy leaf trait variation in modelling for leaf economic spectrum (LES) [Chen et al. 2020], leaf thermoregular and thermal sensitivty which will provide a more accurate representation of within-canopy gradient response to increasing temperatures.[@fauset_differences_2018, @michaletzEnergeticCarbonEconomic2016, @niinemetsWorldwideAnalysisWithincanopy2015, Chen et al. 2020, REFS)
 
 [Add something about how leaf traits along the vertical canopy profile are different than the expectation from leaf economic spectrum (LES)? Chen et al. 2020 is a good paper to help frame this . They make an important point in that paper that we may also want to make here: that the LES was 'built' using mainly sun (upper canopy) leaves; given the vastly different light environments at the bottom of the canopy (and that most leaves in the canopy are likely to be shade leaves) there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy - hence the importance of this review. Keenan & Niinemets 2016  will also be helpful in making this point.]--M N. Smith
 
@@ -260,6 +260,7 @@ In response to the greater light availability, sun leaves have traits allowing g
 The vertical gradient in photosythetic rates is also influenced by...
 .[thoughts: plasticity vs change in tree species composition through the canopy; differences in variability of microenvironments through the profile - highest lower down in canopy?; life history / investment strategies and hence, leaf life spans at leaves at the top vs bottom of the canopy]-- M N. Smith
 
+Photosynthesis increases with increasing temperature and saturates at quatum flux density of 400 to 700nm m-2 s-1, beyond this the leaf experiences heat stress, undergoes non-photochemical quenching, photoinhibition and leaf necrosis [@niinemetsWorldwideAnalysisWithincanopy2015] 
 
 **While sun and shade leaves differ dramatically in $A_{max}$, the temperature sensitivity of photosynthesis does not appear to differ substantially between sun and shade leaves**
 Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5; *revisit this!*) (Campbell and Norman 1998).
