--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4907,6 +4907,39 @@ Leaf Traits/ Photosynthesis/Solar Radiation},
   number = {1}
 }
 
+@article{senfMappingForestDisturbance2020,
+  title = {Mapping the Forest Disturbance Regimes of {{Europe}}},
+  author = {Senf, Cornelius and Seidl, Rupert},
+  date = {2020-09-14},
+  journaltitle = {Nature Sustainability},
+  pages = {1--8},
+  publisher = {{Nature Publishing Group}},
+  issn = {2398-9629},
+  doi = {10.1038/s41893-020-00609-y},
+  url = {https://www.nature.com/articles/s41893-020-00609-y},
+  urldate = {2020-10-01},
+  abstract = {Changes in forest disturbances can have strong impacts on forests, yet we lack consistent data on Europe’s forest disturbance regimes and their changes over time. Here we used satellite data to map three decades of forest disturbances across continental Europe, and analysed the patterns and trends in disturbance size, frequency and severity. Between 1986 and 2016, 17\% of Europe’s forest area was disturbed by anthropogenic and/or natural causes. We identified 36 million individual disturbance patches with a mean patch size of 1.09 ha, which equals an annual average of 0.52 disturbance patches per km2 of forest area. The majority of disturbances were stand replacing. While trends in disturbance size were highly variable, disturbance frequency consistently increased and disturbance severity decreased. Here we present a continental-scale characterization of Europe’s forest disturbance regimes and their changes over time, providing spatial information that is critical for understanding the ongoing changes in Europe’s forests.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JX5YX9IG\\s41893-020-00609-y.html},
+  langid = {english}
+}
+
+@article{senfResponseCanopyHeight2020,
+  title = {The Response of Canopy Height Diversity to Natural Disturbances in Two Temperate Forest Landscapes},
+  author = {Senf, Cornelius and Mori, Akira S. and Müller, Jörg and Seidl, Rupert},
+  date = {2020-09-01},
+  journaltitle = {Landscape Ecol},
+  volume = {35},
+  pages = {2101--2112},
+  issn = {1572-9761},
+  doi = {10.1007/s10980-020-01085-7},
+  url = {https://doi.org/10.1007/s10980-020-01085-7},
+  urldate = {2020-10-01},
+  abstract = {Structural diversity strongly influences habitat quality and the functioning of forest ecosystems. An important driver of the variation in forest structures are disturbances. As disturbances are increasing in many forest ecosystems around the globe, it is important to understand how structural diversity responds to (changing) disturbances.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\NKY5I89W\\Senf et al. - 2020 - The response of canopy height diversity to natural.pdf},
+  langid = {english},
+  number = {9}
+}
+
 @online{ShadeSunForest2019,
   title = {Shade or Sun? {{Forest}} Structure Affects Tree Responses to {{Amazon}} Drought},
   shorttitle = {Shade or Sun?},
