--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -121,7 +121,7 @@ In addition, the vertical structure and hence, microenvironments of forest canop
 **Wind speeds are also higher at the top of the canopy (Fig. **2x**).**
 *(fill in some specifics from the NEON analysis)*
 Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [e.g., REFS; @mcgregor_tree_nodate] and open savannas (Curtis et al. 2018).
-This results in higher boundary layer conductance ($g_{a}$) for canopy leaves. Boundary layer conductance is the thickness of air layer at the surface of the leaf through which water vapor diffuses after leaving the stomata;($g_{a}$) also depends on leaf traits, morphology and windspeed. Large $g_{a}$ for canopy leaves results in smaller difference in $T_{air}$ and $T_{leaf}$ [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a] thus having important implications for leaf thermal sensitivity. 
+This results in higher boundary layer conductance ($g_{a}$) for canopy leaves. Boundary layer conductance is the thickness of air layer at the surface of the leaf through which water vapor diffuses after leaving the stomata;($g_{a}$) also depends on leaf traits, morphology and windspeed. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$ [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a] thus having important implications for leaf thermal sensitivity. 
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. **2x**).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
