--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -73,7 +73,7 @@ Increasing mortality of large trees, sometimes coupled with reduced tree growth 
 
 **The structure and microclimates of global forests are changing due to unprecedented disturbance rates.**
 
-Temperate and tropical forest canopies are already or will be soon functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Loss of canopy cover as a result of increasing temperature and related forest disturbances [@senfCanopyMortalityHas2018a; Senfetal.2020] is associated with reductions in canopy structural complexity, and altered microclimates and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], this has shown to increase understory temperatures which raises concern for understory species and forest biodiversity [@zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]
+Temperate and tropical forest canopies are already or will be soon functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Loss of canopy cover as a result of increasing temperature and related forest disturbances [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] is associated with reductions in canopy structural complexity, and altered microclimates and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], this has shown to increase understory temperatures which raises concern for understory species and forest biodiversity [@zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]
 
 (Marielle--"Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020)".)  
 
